--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: "I guess it comes down to a simple choice:get busy living or get bu
 # 关键词
 keyword: "Java, Kotlin, Android, Vue.js, Apple, iPhone"
 # 博客访问链接
-url: "https://www.tsinghuamakerxian.cn"
+url: "https://www.tsinghuamakerxian.cn/blog"
 # '/blog' if your blog hosted on 'host/blog'
 baseurl: "/blog"
 
