--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ SEOTitle: 党一桐的博客 | NaiveTomcat's Blog
 # 首页背景图片
 header-img: blog/img/post-bg-debug.png
 # 邮箱设置
-email: zhoujianlu666@gmail.com
+email: tomdang@tsinghuamakerxian.cn
 # 网站介绍
 description: "I guess it comes down to a simple choice:get busy living or get busy dying."
 # 关键词
