--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ github_username:    NaiveTomcat
 # 简书个人页面截取用户编号 与微博同理
 #jianshu_username:   56a2c6b6027c
 # twitter个人页面 填写用户名
-#twitter_username:   zhoudalu
+twitter_username:   NaiveTomcat
 
 ## 构建设置
 permalink: pretty
@@ -63,29 +63,29 @@ kramdown:
 # disqus_username: superZhoudalu
 
 ## Gitalk
-#gitalk:
+gitalk:
   #是否开启Gitalk评论
- # enable: true
+  enable: true
   #生成的clientID
-# clientID: bde9d2bff0cd1048efeb
+  clientID: 12a6f8e3f6cb6c7928ff
   #生成的clientSecret
-#  clientSecret: 4be7e16501b7e64eb16568815fe5948fc3007ad1
+  clientSecret: fcf3b06a658e094dfca3fe76a55def41f325f07a
   #仓库名称
-#  repo: superzhoudalu.github.io
+  repo: blog
   #github用户名
-#  owner: superZhouDaLu
-#  admin: superZhouDaLu
+  owner: NaiveTomcat
+  admin: NaiveTomcat
   #是否启用类似FB的阴影遮罩
-#  distractionFreeMode: true
+  distractionFreeMode: true
 
 ## 统计
 # Baidu Analytics
 #ba_track_id: b50bf2b12b5338a1845e33832976fd68
 
 # Google Analytics
-#ga_track_id: 
+ga_track_id: UA-156659734-2
 # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
-#ga_domain: auto
+ga_domain: www.tsinghuamakerxian.cn/blog
 
 ## 标签设置
 # 是否使用首页标签
