--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ friends: [
         href: "https://developer.apple.com/"
     },{
         title: "puppetsheep",
-        href: "https://puppetsheep.github.io"
+        href: "https://puppetsheep.cn"
     },{
         title: "Evil binary",
         href: "https://evil-binary.github.io"
