--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ friends: [
         title: "Apple Developer",
         href: "https://developer.apple.com/"
     },{
-        title: "puppetsheep",
+        title: "灵魂只应独行",
         href: "https://puppetsheep.cn"
     },{
         title: "Evil binary",
