--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: NaiveTomcat-AKA Trimethyldopa
 # 选项卡标题
 SEOTitle: 党一桐的博客 | NaiveTomcat's Blog
 # 首页背景图片
-header-img: blog/img/post-bg-debug.png
+header-img: blog/img/bg.jpg
 # 邮箱设置
 email: tomdang@tsinghuamakerxian.cn
 # 网站介绍
