--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ email: tomdang@tsinghuamakerxian.cn
 # 网站介绍
 description: "I guess it comes down to a simple choice:get busy living or get busy dying."
 # 关键词
-keyword: "Maker, XJTU, XJTU-Youth, Deep Learning, living, coding, test"
+keyword: "Maker, XJTU, XJTU-Youth, Deep Learning, living, coding, test, CTF, Hack"
 # 博客访问链接
 url: "https://www.tsinghuamakerxian.cn/blog"
 # '/blog' if your blog hosted on 'host/blog'
